did nothing but failures ( fixed gun pos )
* fixed scale of gun
* fixed pos of gun

--- a/gyarb-rel-01/Assembly-CSharp.csproj
+++ b/gyarb-rel-01/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\RayViewer.cs" />
      <Compile Include="Assets\Scripts\RaycastShoot.cs" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
      <None Include="Assets\Standard Assets\Characters\FirstPersonCharacter\FirstPersonCharacterGuidelines.txt" />
