--- a/gyarb-rel-01/Assembly-CSharp.csproj
+++ b/gyarb-rel-01/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\RayViewer.cs" />
      <Compile Include="Assets\Scripts\RaycastShoot.cs" />
+     <Compile Include="Assets\Scripts\ShootableEntity.cs" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
      <None Include="Assets\Standard Assets\Characters\FirstPersonCharacter\FirstPersonCharacterGuidelines.txt" />
  <Reference Include="UnityEngine.UI">
