--- a/gyarb-rel-01/gyarb-rel-01.CSharp.csproj
+++ b/gyarb-rel-01/gyarb-rel-01.CSharp.csproj
@@ -61,12 +61,6 @@
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
-      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Common">
-      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="gyarb-rel-01.CSharp.Plugins.csproj">
@@ -77,6 +71,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\RayViewer.cs" />
     <Compile Include="Assets\Scripts\RaycastShoot.cs" />
+    <Compile Include="Assets\Scripts\ShootableEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\Characters\FirstPersonCharacter\FirstPersonCharacterGuidelines.txt" />
