Still working on level 2
Still working

--- a/gyarb-rel-01/gyarb-rel-01.CSharp.csproj
+++ b/gyarb-rel-01/gyarb-rel-01.CSharp.csproj
@@ -69,9 +69,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\ActivateGenerator.cs" />
     <Compile Include="Assets\Scripts\RayViewer.cs" />
     <Compile Include="Assets\Scripts\RaycastShoot.cs" />
     <Compile Include="Assets\Scripts\ShootableEntity.cs" />
+    <Compile Include="Assets\Scripts\displayUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\Characters\FirstPersonCharacter\FirstPersonCharacterGuidelines.txt" />
