Completed Credits - started up level Select
+ Credits now return to main menu
+ Press escape to skip credits
* Started working on level select
* Fixed up Main menu

--- a/gyarb-rel-01/Assembly-CSharp.csproj
+++ b/gyarb-rel-01/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\ActivateGenerator.cs" />
      <Compile Include="Assets\Scripts\CompassPoint.cs" />
+     <Compile Include="Assets\Scripts\CreditsReturn.cs" />
      <Compile Include="Assets\Scripts\DamageScriptExample.cs" />
      <Compile Include="Assets\Scripts\Healthbar.cs" />
      <Compile Include="Assets\Scripts\MenuButtons.cs" />
